# rizin-evm

./: flake.nix  meson.build
include/: evm_consts.h
include/analysis/: analysis_evm.h
include/asm/: asm_evm.h
src/: evm_consts.c
src/analysis/: analysis_evm.c
src/asm/: asm_evm.c
